# xfile

./: .gitignore  AGENTS.md  Makefile  Makefile.am  autogen.sh  configure.ac
libx11dnd/: Makefile  Makefile.am  README.md
libx11dnd/include/: x11dnd.h  x11dnd_action.h  x11dnd_atoms.h  x11dnd_dsave.h  x11dnd_incr.h  x11dnd_proxy.h  x11dnd_source.h  x11dnd_target.h  x11dnd_util.h  x11dnd_xt.h
libx11dnd/man/: x11dnd.3  x11dnd_cancel_drag.3  x11dnd_destroy.3  x11dnd_end_drag.3  x11dnd_get_aware_version.3  x11dnd_init.3  x11dnd_register_target.3  x11dnd_send_finished.3  x11dnd_send_status.3  x11dnd_set_aware.3  x11dnd_source_get_display.3  x11dnd_source_get_user_data.3  x11dnd_source_get_window.3  x11dnd_source_process_event.3  x11dnd_start_drag.3  x11dnd_target_get_action.3  x11dnd_target_get_display.3  x11dnd_target_get_negotiated_version.3  x11dnd_target_get_source_window.3  x11dnd_target_get_user_data.3  x11dnd_target_get_window.3  x11dnd_target_handle_selection_notify.3  x11dnd_target_process_event.3  x11dnd_target_request_selection.3  x11dnd_unregister_target.3  x11dnd_version_at_least.3  x11dnd_xt_cancel_drag.3  x11dnd_xt_destroy.3  x11dnd_xt_init.3  x11dnd_xt_process_event.3  x11dnd_xt_register_target.3  x11dnd_xt_set_drag_icon.3  x11dnd_xt_set_poll_interval.3  x11dnd_xt_start_drag.3  x11dnd_xt_stop_tracking.3  x11dnd_xt_unregister_target.3
libx11dnd/src/: x11dnd_action.c  x11dnd_atoms.c  x11dnd_dsave.c  x11dnd_incr.c  x11dnd_proxy.c  x11dnd_reply.c  x11dnd_source.c  x11dnd_stub.c  x11dnd_target.c  x11dnd_util.c  x11dnd_xt.c
libx11dnd/tests/: Makefile  test_action.c  test_api.c  test_atoms.c  test_dsave.c  test_framework.h  test_incr.c  test_proxy.c  test_reply.c  test_runner.sh  test_source.c  test_source_selection.c  test_target_aware.c  test_util.c
mf/: Makefile.FreeBSD  Makefile.Linux  Makefile.NetBSD  Makefile.OpenBSD  Makefile.SunOS  Makefile.generic
src/: Makefile.am  cbproc.c  common.mf  const.h  dnd.c  dnd.h  exec.c  exec.h  filemgr.c  listw.c  listw.h  listwp.h  main.c  main.h  xdgopen.c  xdgopen.h  xdnd.c  xdnd.h  xfile.desktop
src/man/: gui.man
src/res/: fonts-xft.ad  fonts.ad  prefs.ad
